--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,24 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-      /* Modules */
-      "rootDir": "./src" /* Specify the root folder within your source files. */,
-  
-      /* Emit */
-      "outDir": "./dist" /* Specify an output folder for all emitted files. */
-       //"noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */
-    },
-    "include": ["src"],
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+  "extends": "../tsconfig.json",  // Assuming this extends from a base tsconfig.json
+  "compilerOptions": {
+    /* Modules */
+    "rootDir": "./src",  // Specifies the root folder for your source code.
+
+    /* Emit */
+    "outDir": "./dist",  // Directory to output compiled files (e.g., JavaScript).
+    "noEmitOnError": true,  // Prevent emitting files if there are TypeScript errors.
+
+    /* Node-specific configurations */
+    "esModuleInterop": true,  // Enable ES module interoperability.
+    "skipLibCheck": true,  // Skip type checking of declaration files (improves performance).
+    "forceConsistentCasingInFileNames": true  // Ensure consistent file name casing across the project.
+  },
+  "include": [
+    "src"  // Specify the directory containing your TypeScript files.
+  ],
+  "typeRoots": [
+    "./node_modules/@types",  // Default type definitions
+    "./src/types"  // Custom type definitions (if any).
+  ]
 }
+
