--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
+    "typescript": "^5.7.3",
     "wait-on": "^7.2.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.7"
   }
 }
