--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,24 +1,15 @@
 {
-  "extends": "../tsconfig.json",  // Assuming this extends from a base tsconfig.json
   "compilerOptions": {
-    /* Modules */
-    "rootDir": "./src",  // Specifies the root folder for your source code.
-
-    /* Emit */
-    "outDir": "./dist",  // Directory to output compiled files (e.g., JavaScript).
-    "noEmitOnError": true,  // Prevent emitting files if there are TypeScript errors.
-
-    /* Node-specific configurations */
-    "esModuleInterop": true,  // Enable ES module interoperability.
-    "skipLibCheck": true,  // Skip type checking of declaration files (improves performance).
-    "forceConsistentCasingInFileNames": true  // Ensure consistent file name casing across the project.
+    "rootDir": "src",  // Specifies the root folder within your source files.
+    "outDir": "dist",  // Specifies an output folder for all emitted files.
+    "module": "NodeNext",  // Enables ES module system (required for Node.js).
+    "moduleResolution": "NodeNext",  // Ensures proper resolution of modules.
+    "target": "ES6",  // Specifies that the output should be ES6 JavaScript.
+    "esModuleInterop": true,  // Ensures compatibility with non-ES module code.
+    "strict": true  // Enables strict type-checking options.
   },
-  "include": [
-    "src"  // Specify the directory containing your TypeScript files.
-  ],
-  "typeRoots": [
-    "./node_modules/@types",  // Default type definitions
-    "./src/types"  // Custom type definitions (if any).
-  ]
+  "include": ["src"],
+  "typeRoots": ["./node_modules/@types", "./src/types"]
 }
+
 
